# rust_web

./: .env  Cargo.toml  diesel.toml  state.json
css/: base.css
javascript/: login.js  main.js
migrations/2025-09-07-123815_create_users/: up.sql
migrations/2025-09-12-102613_user_title_constraint/: down.sql  up.sql
src/: database.rs  main.rs
src/auth/: jwt.rs  mod.rs  processes.rs
src/json_serialization/: to_do_items.rs
src/models/item/: new_item.rs
src/models/user/: new_user.rs  user.rs
src/views/: mod.rs  path.rs  token.rs
src/views/app/: content_loader.rs  items.rs  login.rs  logout.rs  mod.rs
src/views/auth/: login.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs  utils.rs
src/views/users/: create.rs  mod.rs
templates/: login.html  main.html
templates/components/: header.html
