[package]
name = "managing_views"
version = "0.1.0"
authors = ["Gabe Ringo<gaberingo12@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
futures = "0.3.5"
serde = { version = "1", features = ["derive"] }
