[package]
name = "managing_views"
version = "0.1.0"
authors = ["Gabe Ringo<gaberingo12@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-service = "2.0.3"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
bcrypt = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
jwt = "0.9.0"
hmac = "0.8.1"
sha2 = "0.9"
log = "0.4.11"
env_logger = "0.8.1"
